# algesnake

./: AGGREGATION_GUIDE.md  PHASE1_COMPLETE.md  README.md  integrate_phase2.sh  pyproject.toml  requirements-dev.txt  requirements.txt
algesnake/: __init__.py  operators.py
algesnake/abstract/: __init__.py  group.py  monoid.py  ring.py  semigroup.py  semiring.py
algesnake/approximate/: __init__.py  bloom.py  countminsketch.py  hnsw.py  hyperloglog.py  minhash.py  minhash_lsh.py  minhash_lsh_ensemble.py  minhash_lsh_forest.py  serialization.py  tdigest.py  topk.py  weighted_minhash.py
algesnake/monoid/: __init__.py  collection.py  numeric.py  option.py
docs/: INTEGRATION_GUIDE.md  QUICKSTART.md  SERIALIZATION_GUIDE.md  SERIALIZATION_STEPS.md  countmin-topk.md  hyperloglog-bloom.md  index_aggregation_explained.py  making_indexes_monoids.py  monoids.md  phase2.md  phase3_week1-2.md  phase3_week3-4.md  phase3_week5-6.md  tdigest.md
examples/: algebird_pattern_example.py  basic_example.py  distributed_aggregation_guide.py  hll_bloom_user_tracking.py  hll_daily_rotation_example.py  hll_storage_serialization.py  hyperloglog_bloom_examples.py  minhash_lsh_monoid_examples.py  phase2_examples.py  phase3_approximation_examples.py  phase3_week3-4_examples.py  phase3_week5-6_tdigest_examples.py  similarity_search_examples.py
examples/twitter_analytics/: 01_unique_users_streaming.py  02_trending_hashtags.py  03_spam_detection.py  04_tweet_embedding_tracker.py  05_user_engagement_metrics.py  06_timeline_builder.py  07_ad_campaign_analytics.py  08_engagement_percentiles.py  09_url_shortener_analytics.py  10_distributed_log_analysis.py  README.md
tests/integration/: test_approximate_algorithms.py  test_monoid_aggregation.py
tests/performance/: test_hyperloglog_benchmark.py
tests/unit/: test_bloom.py  test_collection_monoids.py  test_countminsketch.py  test_group.py  test_hnsw.py  test_hyperloglog.py  test_lsh.py  test_minhash.py  test_monoid.py  test_numeric_monoids.py  test_operators.py  test_option_monoid.py  test_ring.py  test_semigroup.py  test_semiring.py  test_tdigest.py  test_topk.py
